_deployment-manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor-films
  labels:
    app: processor-films
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor-films
  template:
    metadata:
      labels:
        app: processor-films
    spec:
      containers:
      - name: processor-films
        image: registry.paranoids.us/processor-films:main
        imagePullPolicy: Always
        ports:
        - containerPort: 4004
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: processor-films-svc
spec:
  selector:
    app: processor-films
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4004
