_deployment-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: processor-films-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.paranoids.us
    secretName: paranoids-tls
  rules:
  - host: api.paranoids.us
    http:
      paths:
      - pathType: Prefix
        path: /processor-films(/|$)(.*)
        backend:
          service:
            name: processor-films-svc
            port:
              number: 80
